[gd_scene load_steps=3 format=3 uid="uid://birenqvp58ih8"]

[ext_resource type="Script" path="res://Assets/Scripts/UI/InGameHUD/in_game_HUD.gd" id="1_odbd7"]

[sub_resource type="LabelSettings" id="LabelSettings_3yeqg"]
font_size = 24

[node name="InGameHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_odbd7")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 706.0
offset_bottom = 50.0

[node name="Vidas" type="Label" parent="Header"]
layout_mode = 2
text = "Vidas: "
label_settings = SubResource("LabelSettings_3yeqg")

[node name="LifesLabel" type="Label" parent="Header"]
layout_mode = 2
text = "3"
label_settings = SubResource("LabelSettings_3yeqg")

[node name="<Divider>" type="Label" parent="Header"]
layout_mode = 2
text = "   |   "
label_settings = SubResource("LabelSettings_3yeqg")

[node name="Salud" type="Label" parent="Header"]
layout_mode = 2
text = "Salud: "
label_settings = SubResource("LabelSettings_3yeqg")

[node name="HealthLabel" type="Label" parent="Header"]
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_3yeqg")

[node name="<Divider>2" type="Label" parent="Header"]
layout_mode = 2
text = "   |   "
label_settings = SubResource("LabelSettings_3yeqg")

[node name="Score" type="Label" parent="Header"]
layout_mode = 2
text = "Score:"
label_settings = SubResource("LabelSettings_3yeqg")

[node name="ScoreLabel" type="Label" parent="Header"]
layout_mode = 2
text = "100
"
label_settings = SubResource("LabelSettings_3yeqg")

[node name="<Divider>3" type="Label" parent="Header"]
layout_mode = 2
text = "   |   "
label_settings = SubResource("LabelSettings_3yeqg")

[node name="HighScore" type="Label" parent="Header"]
layout_mode = 2
text = "High Score:"
label_settings = SubResource("LabelSettings_3yeqg")

[node name="HighScoreLabel" type="Label" parent="Header"]
layout_mode = 2
text = "1000"
label_settings = SubResource("LabelSettings_3yeqg")
